--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "firebase": "^11.7.1",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
+    "react-router": "^7.6.0",
     "tailwindcss": "^4.1.5",
     "xlsx": "^0.18.5"
   },
