--- a/package.json
+++ b/package.json
@@ -18,7 +18,6 @@
     "react-icon": "^1.0.0",
     "react-icons": "^5.5.0",
     "react-router": "^7.6.0",
-    "tailwindcss": "^4.1.5",
     "xlsx": "^0.18.5"
   },
   "devDependencies": {
@@ -26,10 +25,13 @@
     "@types/react": "^19.1.2",
     "@types/react-dom": "^19.1.2",
     "@vitejs/plugin-react": "^4.4.1",
+    "autoprefixer": "^10.4.21",
     "eslint": "^9.25.0",
     "eslint-plugin-react-hooks": "^5.2.0",
     "eslint-plugin-react-refresh": "^0.4.19",
     "globals": "^16.0.0",
+    "postcss": "^8.5.6",
+    "tailwindcss": "^4.1.11",
     "typescript": "~5.8.3",
     "typescript-eslint": "^8.30.1",
     "vite": "^6.3.5"
